tests/ui/parser/generic-statics.stderr
error: static items may not have generic parameters
  --> $DIR/generic-statics.rs:1:9
   |
LL | static S<T>: i32 = 0;
   |         ^^^

error: static items may not have a where clause
  --> $DIR/generic-statics.rs:5:1
   |
LL | / where
LL | |     Vec<()>: Clone;
   | |__________________^

error: static items may not have a where clause
  --> $DIR/generic-statics.rs:10:1
   |
LL | / where
LL | |     (): Copy,
   | |_____________^

error: aborting due to 3 previous errors

